Some aggregation stages fail with CommandNotSupportedOnView with rawData on time-series collection

XMLWordPrintableJSON

    • Storage Execution
    • Fully Compatible
    • ALL
    • Storage Execution 2025-04-14
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Certain aggregation stages, at least $indexStats/$listCatalog/$planCacheStats, currently fail with CommandNotSupportedOnView when run on a time-series collection with rawData.

            Assignee:
            Gregory Noma
            Reporter:
            Gregory Noma
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: