SERVER-103387 Use execution ns in expression context for aggregation (#34628)

GitOrigin-RevId: c01b1f9d315001c470a3905d61508607302146e5